welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:10: error: not found: value cpt
    cpt = parcoursDiag(i,cpt)
    ^