welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var diag = 0;

//var cpt = 0;

override def run() {
  var y=0
    
  
  
  for (i <- 0 to 6){    
    cpt = parcoursDiag(i,cpt)
    //parcoursDiag(i);
  }
  
  /*
  for (i <- 0 to 6){    
    parcoursDiag(i,cpt + 1)
    cpt = cpt + 1;
  }*/
}

  
/*
00
01 10
02 11 20
03 12 21 30
04 13 22 31 40
*/
  
def parcoursDiag(diag:Int,cpt:Int): Int={
//def parcoursDiag(diag:Int): Int={
  setPos(0,diag)
  var y=diag
  var x=0
  var cpt2=cpt
  ecritMessage(cpt2)
  cpt2=cpt2+1
  while (y!=0){
    x+=1
    y-=1    
    setPos(x,y)
    ecritMessage(cpt2)
    cpt2=cpt2+1
  }
  //cpt = cpt2
  return cpt2
}